--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,18 @@
 </head>
 <body>
     <h1>Welcome to My Blog</h1>
-    <p>This is the home page.</p>
+    {{range .Posts}}
+        <h2>{{.Title}}</h2>
+        <p>{{.Content}}</p>
+    {{else}}
+        <p>No posts available.</p>
+    {{end}}
+
+    <div>
+        {{if gt .PrevPage 0}}
+            <a href="/?page={{.PrevPage}}">Previous</a>
+        {{end}}
+        <a href="/?page={{.NextPage}}">Next</a>
+    </div>
 </body>
 </html>
-<link rel="stylesheet" href="/static/styles.css">
